classifier distance tests

--- a/tests/video_processing_tests.ipynb
+++ b/tests/video_processing_tests.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Video processing tests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,7 +16,7 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "current_dir = os.getcwd()\n",
-    "new_dir = current_dir.replace(\"\\\\tests\", \"\")\n",
+    "new_dir = current_dir.replace(\"\\/tests\", \"\")\n",
     "os.chdir(new_dir)\n",
     "from services.medias.video_processor import VideoProcessor\n",
     "from DTOs.person_dto import PersonDTO\n",
@@ -38,40 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Blur\n",
-    "\n",
-    "for personDTO in personsDTO:\n",
-    "    personDTO.should_be_blurred = True\n",
+    "personsDTO[1].should_be_blurred = True\n",
     "video_processor.save(personsDTO=personsDTO, output_video_path=\"results/output.mp4\", gradual=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow is using GPU: /device:GPU:0\n"
-     ]
-    }
-   ],
-   "source": [
-    "if tf.test.gpu_device_name():\n",
-    "    print(\"TensorFlow is using GPU:\", tf.test.gpu_device_name())\n",
-    "else:\n",
-    "    print(\"TensorFlow is using CPU\")"
    ]
   }
  ],
