multiple comparators implementation in architecture

--- a/tests/classifier_tests.ipynb
+++ b/tests/classifier_tests.ipynb
@@ -50,9 +50,9 @@
     "new_dir = current_dir.replace(\"\\\\tests\", \"\")\n",
     "os.chdir(new_dir)\n",
     "\n",
-    "from services.face_comparator import FaceComparator\n",
-    "from services.face_detector import FaceDetector\n",
-    "from services.image_editor import ImageEditor"
+    "from services.faces.face_detector import FaceDetector\n",
+    "from services.faces.comparators.yolo_comparator import YoloComparator\n",
+    "from services.images.image_editor import ImageEditor"
    ]
   },
   {
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "face_comparator = FaceComparator()\n",
+    "face_comparator = YoloComparator()\n",
     "face_detector = FaceDetector()"
    ]
   },
