vgg face model export

--- a/tests/video_processing_tests.ipynb
+++ b/tests/video_processing_tests.ipynb
@@ -40,10 +40,10 @@
    "outputs": [],
    "source": [
     "video: Video = Video(\"training/detector/dataset/test/videos/QUI EST L IMPOSTEUR (ft Eric Ramzy).mp4\")\n",
-    "video_processor: VideoProcessor = VideoProcessor(video)\n",
+    "video_processor: VideoProcessor = VideoProcessor(video, comparator=\"Yolo\")\n",
     "personsDTO: list[PersonDTO] = video_processor.get_persons()\n",
     "for index, personDTO in enumerate(personsDTO):\n",
-    "    plt.suptitle(\"Persons detected\")\n",
+    "    plt.suptitle(\"Persons in the video\")\n",
     "    plt.subplot(1, len(personsDTO), index+1)\n",
     "    plt.imshow(personDTO.face)\n",
     "    plt.axis('off')"
